<resources>
    <string name="app_name">Happy Places</string>
    <string name="fab_icon">Fab Icon</string>
    <string name="edit_text_hint_title">Title</string>
    <string name="edit_text_hint_description">Description</string>
    <string name="edit_text_hint_date">Date</string>
    <string name="edit_text_hint_location">Location</string>
    <string name="text_add_image">ADD IMAGE</string>
    <string name="btn_text_save">SAVE</string>
    <string name="add_happy_places">Add Happy Places</string>
    <string name="no_happy_places_found">No Happy Places Found.\n Tap on + icon to add Happy Place</string>
    <string name="image_content_description">image</string>
    <string name="edit_happy_place">Edit Happy Place</string>
    <string name="btn_update_text">UPDATE</string>
    <string name="btn_text_view_on_map">VIEW ON MAP</string>
    <string name="add_place_select_current_location_text">SELECT CURRENT LOCATION</string>
    <string name="edit_text_hint_please_wait">Please Wait</string>
    <string name="btn_toolbar_reset">RESET</string>
    <!-- Google Maps API key from Google Developer Console-->
    <string name="google_maps_api_key">google_maps_api_key</string>
    <!-- App ID from Ad Mob Dashboard-->
    <string name="app_id">app_id</string>
    <!-- https://developers.google.com/admob/android/test-ads -->
    <string name="banner_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>