<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddHappyPlacesActivity">
    
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addHappyPlacesToolBar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/toolbarTheme"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent">
        <Button
            android:id="@+id/btn_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/btn_toolbar_reset"
            android:textSize="14sp"
            android:background="@drawable/shape_button_rounded"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/sv_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addHappyPlacesToolBar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/main_content_padding">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_hint_title"
                    android:textSize="@dimen/edit_text_text_size"
                    android:inputType="textCapWords"
                    android:textColorHint="@color/colorSecondary"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_screen_til_marginTop"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_hint_description"
                    android:textSize="@dimen/edit_text_text_size"
                    android:inputType="textCapWords"
                    android:textColorHint="@color/colorSecondary"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_screen_til_marginTop"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_hint_date"
                    android:textSize="@dimen/edit_text_text_size"
                    android:inputType="textCapWords"
                    android:textColorHint="@color/colorSecondary"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_screen_til_marginTop"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_hint_location"
                    android:textSize="@dimen/edit_text_text_size"
                    android:inputType="textCapWords"
                    android:textColorHint="@color/colorSecondary"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_select_current_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_place_select_current_location_marginTop"
                android:background="@drawable/shape_image_view_border"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="@dimen/add_place_select_current_location_padding"
                android:text="@string/add_place_select_current_location_text"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="@dimen/add_place_select_current_location_textsize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_location" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_place_image"
                    android:layout_height="@dimen/add_screen_place_image_size"
                    android:layout_width="@dimen/add_screen_place_image_size"
                    android:src="@drawable/add_screen_image_placeholder"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:id="@+id/tv_add_image"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/text_add_image"
                    android:textSize="@dimen/add_screen_text_add_image_textSize"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center"
                    android:layout_gravity="center"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_screen_btn_save_marginTop"
                android:text="@string/btn_text_save"
                android:textColor="@color/white_color"
                android:textSize="@dimen/btn_text_size"
                />
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>